# rust-by-example

./: README.md
async/: Cargo.toml
async/src/: main.rs
err_handling_sqlite/: Cargo.toml
err_handling_sqlite/src/: main.rs
fn_higher_order/: Cargo.toml
fn_higher_order/src/: main.rs
http-client/: Cargo.toml
http-client/src/: http.rs  logging.rs  main.rs
mod-example/: Cargo.toml
print_type/: Cargo.toml
print_type/src/: main.rs
proc-macro/: readme.md
simple-web-server/: Cargo.toml
simple-web-server/src/: main.rs
src/: main.rs
src/brackets_game/: greeter.rs
str_cow_box/: Cargo.toml
str_cow_box/src/: main.rs
tcp-async/: Cargo.toml
tcp-async/src/: main.rs
trait-examples/: Cargo.toml
trait-examples/src/: main.rs
