[package]
name = "http-client"
version = "0.1.0"
authors = ["lima1909"]
edition = "2018"

[dependencies]
log = "0.4.8"
simplelog = "0.7.4"

futures = "0.3.4"
reqwest = "0.10.2"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] } 

serde_json = "1.0.48"